fix: Responsividade, Adicionado na motion.div da página unauthorizedUser style. Adicionado na motion.div do component cardUser style. Adicionado style ao primeiro Card do componente userCard. Adiciona overflow:hidden ao #avatarRegister do style.css da página profile

--- a/src/pages/profile/styles.css
+++ b/src/pages/profile/styles.css
@@ -5,4 +5,5 @@
   margin: 30px auto;
   padding: 20px;
   border-radius: 15px;
+  overflow: hidden;
 }
